Fixed gaps in board

--- a/src/main/resources/MineSweeperStyle.css
+++ b/src/main/resources/MineSweeperStyle.css
@@ -5,7 +5,7 @@
     -fx-alignment: center;
     -fx-font-family: Verdana;
     -fx-font-weight: Bold;
-    -fx-font-size: 20;
+    -fx-font-size: 18;
     -fx-background-color: Green;
 
 
@@ -18,7 +18,7 @@
     -fx-alignment: center;
     -fx-font-family: Verdana;
     -fx-font-weight: Bold;
-    -fx-font-size: 20;
+    -fx-font-size: 18;
     -fx-background-color: DarkGreen;
 }
 
@@ -29,7 +29,7 @@
     -fx-alignment: center;
     -fx-font-family: Verdana;
     -fx-font-weight: Bold;
-    -fx-font-size: 20;
+    -fx-font-size: 18;
     -fx-background-color: #ff8200;
 }
 
@@ -40,7 +40,7 @@
     -fx-alignment: center;
     -fx-font-family: Verdana;
     -fx-font-weight: Bold;
-    -fx-font-size: 20;
+    -fx-font-size: 18;
     -fx-background-color: #f50202;
 }
 
